css/style.css
/* ... */
ul.metas li:last-child:after { content: ' ' }
ul.metas li a { color: #00006B }
.meta-detail {
    background: #f4f4f4;
    border-radius: 3px;
    padding: 2px;
}
/* Contact Section */
/*********************************
/* Map Section
**********************************/
#contact {
    padding: 60px 0 ;
    background-color: #EAEAEA;
}
#contact h2 {
    color: #000000;
}
#map {
    position: relative;
    width: 100%;
    height: 400px;
}
.contact-detail {
    text-align: center;
    margin: 0px 0;
}
.contact-detail i.fa {
    text-align: center;
    font-size: 30px;
    background-color: #333;
    color: #FFFFFF;
    padding: 25px 0;
    border-radius: 0;
    border-top-left-radius: 0;
    margin: 0 10px;
    margin-right: 20px;
    width: 82px;
    height: 80px;
    transition: background-color 0.5s;
}
.contact-detail:hover i.fa { background-color: #333333 }
form#contact-form { padding: 40px 0 }
.contact form#contact-form {padding: 0}
.form-control:focus {
    border-color: inherit;
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}
.form-control {
    display: block;
    width: 100%;
    height: 44px;
    padding: 10px 12px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 4px;
    -webkit-box-shadow: none;
    box-shadow: none;
    -webkit-transition: none;
    -o-transition: none;
    transition: none;
}
p.help-block.text-danger ul li {
    display: block;
    margin-left: -20px;
    color: #00008F;
}
#success .alert-danger {
    color: #00008F;
    background-color: #FDFDFD;
    border-color: #00008F;
    margin-bottom: 10px;
}
/* Footer */
#footer {
    padding: 35px 0 10px;
    background-color: #333;
    color: #ffffff;
}
ul.social li a i {
    font-size: 18px;
    background: transparent;
    width: 32px;
    height: 32px;
    padding: 7px 0;
    text-align: center;
    border-top-left-radius: 0;
    border: 1px solid transparent;
    color: #ffffff;
    transition: all 0.5s;
}
ul.social li a i:hover { border-color: #ffffff }
/* Blog Page */
.blog .media.post {
    background: #fff;
    padding: 10px;
    border: 1px solid #E9E9E9;
    border-bottom-color: transparent;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.blog .post-meta {
    border-top: 1px solid #ebebeb;
    background-color: #ffffff;
    padding: 5px 10px;
    height: auto;
    position: relative;
    min-height: 35px;
    border: 1px solid #ebebeb;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}
.pagination > li > a,
.pagination > li > span {
    position: relative;
    float: left;
    padding: 6px 12px;
    margin-left: 0;
    line-height: 1.42857143;
    color: #FFFFFF;
    text-decoration: none;
    background-color: #00008F;
    border: 1px solid #00008F;
    margin: 3px 3px;
    font-weight: 700;
    text-transform: uppercase;
    border-radius: 5px;
}
.pagination > li > a.active,
.pagination > li > a:hover,
.pagination > li > span:hover,
.pagination > li > a:focus,
.pagination > li > span:focus {
    color: #FFFFFF;
    background-color: #ddab15;
    border-color: #ddab15;
}
/* Sidebar */
.widget {
    margin-bottom: 40px;
    padding: 0 20px;
}
.comment h4,
.widget h4,
h4.text-uppercase {
    font-weight: 300;
    color: #00008F;
}
.comment h4 span.comments { color: #333333 }
/* Search */
button.btn.btn-default {
    padding: 11px 15px;
    color: #ffffff;
    background: #00008F;
}
/* Categories and Archive Widget */
ul.bullet-lists { margin-top: 20px }
ul.list-unstyled.bullet-lists li span.fa.fa-circle {
    font-size: 8px;
    vertical-align: middle;
    margin-right: 10px;
    color: #00008F;
}
ul.list-unstyled.bullet-lists li { padding: 5px 0 }
ul.list-unstyled.bullet-lists li:hover { color: #00008F }
/* Post Tab */
.post-tab .nav-tabs > li > a {
    margin-right: -1px;
    line-height: 1.42857143;
    border: 1px solid #ddd;
    border-radius: 0px 0px 0 0;
}
.post-tab .list-group-item:first-child {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    margin-top: -1px;
}
.post-tab .nav-tabs > li > a:hover,
.post-tab .nav-tabs > li > a:focus {
    color: #FFF;
    background-color: #FC3;
    border: 1px solid #ddd;
    border-bottom-color: transparent;
}
/* Tags */
ul.list-inline.bullet-lists li a { color: inherit }
ul.list-inline.bullet-lists li {
    background: #F8F8F8;
    padding: 5px 10px;
    margin-bottom: 5px;
    margin-right: 2px;
    border: 1px solid #F4F4F4;
    border-radius: 3px;
    transition: all 0.3s;
}
ul.list-inline.bullet-lists li:hover { background: #00008F }
/* Single Blog Post */
.blog-post .post-wrap img,
.work-detail img.featured { margin: 20px 0 }
ul.meta-tags li a { font-style: italic }
ul.meta-tags li:after { content: ',' }
ul.meta-tags li:last-child:after { content: ' ' }
/* Author Box */
.media.post-author {
    background: #00008F;
    padding: 20px;
    margin-top: -1px;
}
.media.post-author a { content: inherit }
.blog-post .post-wrap {
    padding: 20px;
    margin-bottom: 0;
    border: 1px solid #DDDDDD;
    border-top-right-radius: 4px;
    border-top-left-radius: 4px;
}
/* Comment */
.media.comment-block {
    border: 1px solid #DDD;
    padding: 20px;
}
.comment { margin-top: 40px }
.comment form { margin-top: -30px }
.comment input,
.comment textarea { margin-bottom: 15px }

